--- a/HTML/User.html
+++ b/HTML/User.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>User Page</title>
-        <link rel="stylesheet" href="CSS/UserPage.css">
+        <link rel="stylesheet" href="../CSS/Main.css">
+        <link rel="stylesheet" href="../CSS/UserPage.css">
     </head>
     <body class="UserPage">
         <header>
@@ -34,7 +35,7 @@
             </div>
             <br>
             
-            <div class="'AvailabileRecipes">
+            <div class="AvailableRecipes">
                 <h2 style="display: inline;">All Available Recipes</h2>
 
                 <select id="CategoryFilter">
@@ -90,6 +91,7 @@
                         <td><a href="User.html" class="HeartIcon">♥</a></td>
                     </tr>
                 </table>
+            </div>
 
         </main>
 
