--- a/HTML/User.html
+++ b/HTML/User.html
@@ -18,7 +18,7 @@
 
             <div class="UserInfo">
                 <div id="UserPersonalInfo">
-                    <img src="images/userIcon.png" alt="User Image" class="UserImg">
+                    <img src="../images/userIcon.png" alt="User Image" class="UserImg">
                     <h2>My Information</h2>
                     Name
                     <br>
@@ -72,7 +72,7 @@
             </div>
 
             <div class="FavoriteRecipes">
-                <h2>My Favorite Recipes</h2>
+                <h2>Your Favorite Recipes</h2>
                 <table class="RecipeTable">
                     <tr>
                         <th>Recipe Name</th>
