header and footer

--- a/HTML/User.html
+++ b/HTML/User.html
@@ -8,8 +8,18 @@
         <link rel="stylesheet" href="../CSS/UserPage.css">
     </head>
     <body class="UserPage">
-        <header>
-
+         <header>
+<div class="topnav">
+    <div class="logo"> <img src="../images/logo.png" alt="Logo" class="logoimg"> Recipes</div>
+    <nav>
+        <ul>
+       <li><a href="index.html">Home</a></li>
+        <li><a href="MyRecipes.html">My Recipes</a></li>
+        <li><a href="AddRecipe.html">Add Recipe</a></li>
+        <li><a href="AboutUs.html">About Us</a></li>
+        </ul>
+    </nav>
+    </div>
         </header>
 
         <main>
@@ -96,7 +106,11 @@
         </main>
 
         <footer>
-
+        <footer>
+<div class="footer-content">
+    <p class="copy">© 2026 Our Name. All rights reserved.</p>
+       </div>     
+        </footer>
         </footer>
     </body>
 </html>
