--- a/HTML/Login.html
+++ b/HTML/Login.html
@@ -3,15 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ramadan Recipes | Home</title>
+  <title>Log-in</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="../CSS/style.css">
 
   <style>
     @import url("../CSS/Main.css");
-    @import url("../CSS/Home.css");
+    @import url("../CSS/Auth.css");
   </style>
+
+  <script src="../JS/auth.js" defer></script>
 </head>
 
 <body class="headerandfooter">
@@ -20,7 +22,7 @@
     <div class="logo"><img src="../images/logo.png" alt="Logo" class="logoimg"> Ramadan</div>
     <nav>
       <ul>
-        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="MyRecipes.html">My Recipes</a></li>
         <li><a href="AddRecipe.html">Add Recipe</a></li>
         <li><a href="AboutUs.html">About Us</a></li>
@@ -28,24 +30,26 @@
     </nav>
   </div>
 </header>
-
-
 <main>
   <div class="card">
-    <h1>Welcome</h1>
-    <p>Choose how you want to enter the system.</p>
+    <h1>Log-in</h1>
 
-    <h2 style="margin-top:14px;">User</h2>
-    <div class="btn-row">
-      <a class="btn btn-primary" href="login.html">User Sign-in</a>
-      <a class="btn btn-secondary" href="signup.html">User Sign-up</a>
-    </div>
+    <form id="loginForm">
+      <label for="email">Email address</label>
+      <input type="email" id="email" name="email" placeholder="name@email.com" required>
 
-    <h2 style="margin-top:18px;">Admin</h2>
-    <div class="btn-row">
-      <a class="btn btn-primary" href="login.html">Admin Sign-in</a>
-      <a class="btn btn-secondary" href="index.html">Back to About</a>
-    </div>
+      <label for="pass">Password</label>
+      <input type="password" id="pass" name="password" placeholder="********">
+
+      <div class="btn-row">
+        <button class="btn btn-primary" type="submit">Login as User</button>
+        <button class="btn btn-secondary" id="btnAdmin" type="button">Login as Admin</button>
+      </div>
+
+      <div class="form-links">
+        New user? <a href="signup.html">Sign-up</a>
+      </div>
+    </form>
   </div>
 </main>
 
