--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,10 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="../CSS/style.css">
+
 
         <style>
             @import url("../CSS/Main.css");
+                @import url("../CSS/style.css");
 </style>
         <title>rec</title>
 
@@ -72,6 +73,8 @@ To explore the platform, you can log in or create a new account.
 <div class="footer-content">
     <p class="copy">© 2026 Our Name. All rights reserved.</p>
        </div>     
+      
+     
         </footer>
     </body>
 </html>
