--- a/HTML/Login.html
+++ b/HTML/Login.html
@@ -6,11 +6,11 @@
   <title>Log-in</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="../CSS/style.css">
+
 
   <style>
     @import url("../CSS/Main.css");
-    @import url("../CSS/Auth.css");
+    @import url("../CSS/style.css");
   </style>
 
   <script src="../JS/auth.js" defer></script>
@@ -54,9 +54,11 @@
 </main>
 
 <footer>
-  <div class="footer-content">
+<div class="footer-content">
     <p class="copy">© 2026 Our Name. All rights reserved.</p>
-  </div>
-</footer>
+       </div>     
+      
+     
+        </footer>
 </body>
 </html>
