--- a/HTML/home.html
+++ b/HTML/home.html
@@ -6,11 +6,11 @@
   <title>Ramadan Recipes | Home</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="../CSS/style.css">
+
 
   <style>
     @import url("../CSS/Main.css");
-    @import url("../CSS/Home.css");
+    @import url("../CSS/style.css");  
   </style>
 </head>
 
@@ -50,9 +50,11 @@
 </main>
 
 <footer>
-  <div class="footer-content">
+<div class="footer-content">
     <p class="copy">© 2026 Our Name. All rights reserved.</p>
-  </div>
-</footer>
+       </div>     
+      
+     
+        </footer>
 </body>
 </html>
