admin and view recipe V1
added

--- a/HTML/User.html
+++ b/HTML/User.html
@@ -71,7 +71,7 @@
                         <td>Snacks</td>
                     </tr>
                     <tr>
-                        <td><a href="" class="RecipeURL">Oat Soup</a></td>
+                        <td><a href="ViewRecipe.html" class="RecipeURL">Oat Soup</a></td>
                         <td><img src="../images/Oat-soup.jpg" alt="Recipe Photo" class="RecipeImg"></td>
                         <td><img src="../images/ChefAhmed.jpg" alt="Creator Image" class="CreatorImg"><br>Chef Ahmed</td>
                         <td>230</td>
