--- a/HTML/MyRecipes.html
+++ b/HTML/MyRecipes.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Recipes - Ramadan Recipes</title>
+  <title>My Recipes</title>
 
 
   <link rel="stylesheet" href="../CSS/Main.css" />
-  
   <link rel="stylesheet" href="../CSS/MyRecipes.css" />
+  
 </head>
 
 <body>
@@ -34,7 +34,7 @@
     <main>
       <div class="page-header">
         <h2>My Recipes</h2>
-        <!-- اسم الصفحة عندك AddRecipe.html -->
+      
         <a href="AddRecipe.html" class="btn btn-primary">+ Add New Recipe</a>
       </div>
 
@@ -84,11 +84,10 @@
               </td>
               <td class="likes-count">245 ❤️</td>
               <td>
-                <!-- اسم الملف عندك EditRecipe.html -->
                 <a href="EditRecipe.html" class="btn btn-edit">Edit</a>
               </td>
               <td>
-                <!-- delete واجهة فقط -->
+                
                 <a href="#" class="btn btn-delete">Delete</a>
               </td>
             </tr>
