--- a/HTML/AddRecipe.html
+++ b/HTML/AddRecipe.html
@@ -17,18 +17,20 @@
     <body class="headerandfooter">
         <header>
 <div class="topnav">
-    <div class="logo"> <img src="../images/logo.png" alt="" class="logoimg"> Ramadan</div>
+    <div class="logo"> <img src="../images/logo.png" alt="" class="logoimg"> Ramadan's Table</div>
     <nav>
         <ul>
        <li><a href="index.html">Home</a></li>
         <li><a href="MyRecipes.html">My Recipes</a></li>
         <li><a href="AddRecipe.html">Add Recipe</a></li>
-        <li><a href="AboutUs.html">About Us</a></li>
+        <li><a href="User.html">Account</a></li>
         </ul>
     </nav>
     </div>
         </header>
-
+        <div class="breadcrumb">
+            <a href="index.html">Home</a> › <a href="MyRecipes.html">My Recipes</a> › Add Recipe
+        </div>
         <main>
 
 <div class="add">
@@ -41,8 +43,8 @@
     <label for="Category">Category:</label><br>
     <select id="Category" name="Category" >
         <option value="recipe1">Select a recipe</option>
-        <option value="recipe2">ftor</option>
-        <option value="recipe3">shoor</option>
+        <option value="recipe2">iftar</option>
+        <option value="recipe3">suhoor</option>
         <option value="recipe4">snack</option>
     </select><br><br>
 
