--- a/HTML/Admin.html
+++ b/HTML/Admin.html
@@ -14,17 +14,18 @@
 <header>
     <div class="topnav">
         <div class="logo">
-            <img src="../images/logo.png" alt="Logo" class="logoimg"> Recipes
+            <img src="../images/logo.png" alt="Logo" class="logoimg"> Ramadan's Table
         </div>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="AboutUs.html">About Us</a></li>
             </ul>
         </nav>
     </div>
 </header>
-
+<div class="breadcrumb">
+    <a href="index.html">Home</a> › <a href="home.html">Entry Page</a> › Admin Page
+  </div>
 <main>
 
     <!-- Welcome + Logout -->
