--- a/HTML/User.html
+++ b/HTML/User.html
@@ -10,17 +10,21 @@
     <body class="UserPage">
         <header>
             <div class="topnav">
-                <div class="logo"> <img src="../images/logo.png" alt="Logo" class="logoimg"> Recipes</div>
+                <div class="logo"> <img src="../images/logo.png" alt="Logo" class="logoimg"> Ramadan's Table</div>
                     <nav>
                         <ul>
                             <li><a href="index.html">Home</a></li>
                             <li><a href="MyRecipes.html">My Recipes</a></li>
                             <li><a href="AddRecipe.html">Add Recipe</a></li>
-                            <li><a href="AboutUs.html">About Us</a></li>
+                            <li><a href="User.html">Account</a></li>
                         </ul>
                     </nav>
             </div>
         </header>
+
+        <div class="breadcrumb">
+            <a href="index.html">Home</a> › User Page
+        </div>
 
         <main>
             <span class="WelcomeUser">Welcome Noura!</span>
