--- a/HTML/index.html
+++ b/HTML/index.html
@@ -18,15 +18,7 @@
     <body class="headerandfooter">
         <header>
 <div class="topnav">
-    <div class="logo"> <img src="../images/logo.png" alt="" class="logoimg"> Ramadan</div>
-    <nav>
-        <ul>
-       <li><a href="index.html">Home</a></li>
-        <li><a href="MyRecipes.html">My Recipes</a></li>
-        <li><a href="AddRecipe.html">Add Recipe</a></li>
-        <li><a href="AboutUs.html">About Us</a></li>
-        </ul>
-    </nav>
+    <div class="logo"> <img src="../images/logo.png" alt="" class="logoimg"> Ramadan's Table</div>
     </div>
         </header>
 
@@ -36,11 +28,11 @@
 
 <main>
 <div class="card">
-<h1>Crescent Table</h1>
+<h1>Ramadan's Table</h1>
 <p><em>Where recipes meet tradition.</em></p>
 
 <p>
-Crescent Table is a recipe-sharing platform designed especially for Ramadan.
+Ramadan's Table is a recipe-sharing platform designed especially for Ramadan.
 It brings together traditional and modern dishes in one place, making it easier
 for families and individuals to plan their Iftar and Suhoor meals.
 </p>
