--- a/HTML/MyRecipes.html
+++ b/HTML/MyRecipes.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Recipes</title>
 
 
-  <link rel="stylesheet" href="../CSS/Main.css" />
-  <link rel="stylesheet" href="../CSS/MyRecipes.css" />
+  <link rel="stylesheet" href="../CSS/Main.css">
+  <link rel="stylesheet" href="../CSS/MyRecipes.css">
   
 </head>
 
@@ -16,8 +16,8 @@
     <header>
       <div class="topnav">
         <div class="logo">
-          <img src="../images/logo.png" alt="Logo" class="logoimg" />
-          Ramadan
+          <img src="../images/logo.png" alt="Logo" class="logoimg">
+          Ramadan's Table
         </div>
 
         <nav>
@@ -25,11 +25,15 @@
             <li><a href="home.html">Home</a></li>
             <li><a href="MyRecipes.html">My Recipes</a></li>
             <li><a href="AddRecipe.html">Add Recipe</a></li>
-            <li><a href="User.html">User</a></li>
+            <li><a href="User.html">Account</a></li>
           </ul>
         </nav>
       </div>
     </header>
+
+    <div class="breadcrumb">
+      <a href="index.html">Home</a> › <a href="User.html">User Page</a> › My Recipes
+    </div>
 
     <main>
       <div class="page-header">
@@ -256,6 +260,5 @@
     </footer>
   </div>
 
-  <script src="../JS/MyRecipes.js"></script>
 </body>
 </html>
