--- a/HTML/ViewRecipe.html
+++ b/HTML/ViewRecipe.html
@@ -13,18 +13,22 @@
   <header>
     <div class="topnav">
       <div class="logo">
-        <img src="../images/logo.png" alt="Logo" class="logoimg"> Recipes
+        <img src="../images/logo.png" alt="Logo" class="logoimg"> Ramadan's Table
       </div>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="MyRecipes.html">My Recipes</a></li>
           <li><a href="AddRecipe.html">Add Recipe</a></li>
-          <li><a href="AboutUs.html">About Us</a></li>
+          <li><a href="User.html">Account</a></li>
         </ul>
       </nav>
     </div>
   </header>
+
+  <div class="breadcrumb">
+    <a href="index.html">Home</a> › <a href="User.html">User Page </a> › Oat Soup
+  </div>
 
   <main>
 
