--- a/HTML/home.html
+++ b/HTML/home.html
@@ -17,18 +17,18 @@
 <body class="headerandfooter">
 <header>
   <div class="topnav">
-    <div class="logo"><img src="../images/logo.png" alt="Logo" class="logoimg"> Ramadan</div>
+    <div class="logo"><img src="../images/logo.png" alt="Logo" class="logoimg">Ramadan's Table</div>
     <nav>
       <ul>
         <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="MyRecipes.html">My Recipes</a></li>
-        <li><a href="AddRecipe.html">Add Recipe</a></li>
-        <li><a href="AboutUs.html">About Us</a></li>
+
       </ul>
     </nav>
   </div>
 </header>
-
+<div class="breadcrumb">
+    <a href="index.html">Home</a> › Entry Page
+  </div>
 
 <main>
   <div class="card">
