--- a/HTML/takeheaderandfooter.html
+++ b/HTML/takeheaderandfooter.html
@@ -16,7 +16,7 @@
     <body class="headerandfooter">
         <header>
 <div class="topnav">
-    <div class="logo"> <img src="../images/logo.png" alt="" class="logoimg"> Ramadan</div>
+    <div class="logo"> <img src="../images/logo.png" alt="" class="logoimg"> Ramadan's Table</div>
     <nav>
         <ul>
        <li><a href="index.html">Home</a></li>
