--- a/HTML/ViewRecipe.html
+++ b/HTML/ViewRecipe.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>View Recipe - Oat Soup</title>
 
-  <link rel="stylesheet" href="../CSS/Main.css">
   <link rel="stylesheet" href="../CSS/ViewRecipe.css">
+  <link rel="stylesheet" href="../CSS/Main.css">
 </head>
 
 <body class="ViewRecipePage">
@@ -36,7 +36,7 @@
     <div class="TopButtons">
       <button type="button" class="TopBtn">★ Favourite</button>
       <button type="button" class="TopBtn">♥ Like</button>
-      <button type="button" class="TopBtn DangerBtn">⚑ Report</button>
+      <button type="button" class="TopBtn">⚑ Report</button>
     </div>
 
     <!-- ✅ Part: Recipe name and photo -->
@@ -91,15 +91,12 @@
       </ol>
     </div>
 
-    <!-- ✅ Part: Video (optional) -->
-    <!-- If you want a video, UNCOMMENT this section and put a real link.
-         If no video, keep it omitted (as required). -->
-    <!--
+  
     <div class="Card">
       <h2>Video</h2>
       <a class="RecipeURL" href="https://www.youtube.com/" target="_blank">Watch on YouTube</a>
     </div>
-    -->
+
 
     <!-- ✅ Part: Comments newest -> oldest + form -->
     <div class="Card">
@@ -155,7 +152,7 @@
 
   <footer>
     <div class="footer-content">
-      <p class="copy">© 2026 Our Name. All rights reserved.</p>
+      <p class="copy">© 2026 Ramadan's Table · All rights reserved <br> Contact: info@RamadanTable.sa | +966 50 000 0000 </p>
     </div>
   </footer>
 <script src="../JS/ViewRecipe.js"></script>
