--- a/HTML/takeheaderandfooter.html
+++ b/HTML/takeheaderandfooter.html
@@ -34,9 +34,9 @@
         </main>
 
         <footer>
-<div class="footer-content">
-    <p class="copy">© 2026 Our Name. All rights reserved.</p>
-       </div>     
+            <div class="footer-content">
+                <p class="copy">© 2026 Ramadan's Table · All rights reserved <br> Contact: info@RamadanTable.sa | +966 50 000 0000 </p>
+            </div>
         </footer>
     </body>
 </html>
