--- a/HTML/Admin.html
+++ b/HTML/Admin.html
@@ -31,7 +31,6 @@
     <!-- Welcome + Logout -->
     <div class="AdminTop">
         <span class="WelcomeAdmin">Welcome Sara!</span>
-        <a href="home.html" class="LogOutAdmin">Log-out</a>
     </div>
 
     <!-- Admin Information -->
@@ -110,12 +109,12 @@
             </tr>
         </table>
     </div>
-
+    <a href="home.html" class="LogOutAdmin">Log-out</a>
 </main>
 
 <footer>
     <div class="footer-content">
-        <p class="copy">© 2026 Our Name. All rights reserved.</p>
+        <p class="copy">© 2026 Ramadan's Table · All rights reserved <br> Contact: info@RamadanTable.sa | +966 50 000 0000 </p>
     </div>
 </footer>
 
