--- a/HTML/User.html
+++ b/HTML/User.html
@@ -50,15 +50,17 @@
             <br>
             
             <div class="AvailableRecipes">
+                
                 <h2 style="display: inline;">All Available Recipes</h2>
-
-                <select id="CategoryFilter">
-                    <option value="AllCategories">All Categories</option>
-                    <option value="Iftar">Iftar</option>
-                    <option value="Snack">Snack</option>
-                    <option value="Suhoor">Suhoor</option>
-                </select>
-
+                <div class="FilterContainer">
+                    <select class="CategoryFilter">
+                        <option value="AllCategories">All Categories</option>
+                        <option value="Iftar">Iftar</option>
+                        <option value="Snack">Snack</option>
+                        <option value="Suhoor">Suhoor</option>
+                    </select>
+                    <button type="button" class="CategoryFilter">▽ Filter</button>
+                </div>
                 <table class="RecipeTable">
                     <tr>
                         <th>Recipe Name</th>
@@ -68,18 +70,18 @@
                         <th>Category</th>
                     </tr>
                     <tr>
-                        <td><a href="" class="RecipeURL">Date Energy Balls</a></td>
-                        <td><img src="../images/Date-balls.jpg" alt="Recipe Photo" class="RecipeImg"></td>
-                        <td><img src="../images/ChefAhmed.jpg" alt="Creator Image" class="CreatorImg"><br>Chef Ahmed</td>
-                        <td>125</td>
-                        <td>Snacks</td>
-                    </tr>
-                    <tr>
                         <td><a href="ViewRecipe.html" class="RecipeURL">Oat Soup</a></td>
                         <td><img src="../images/Oat-soup.jpg" alt="Recipe Photo" class="RecipeImg"></td>
                         <td><img src="../images/ChefAhmed.jpg" alt="Creator Image" class="CreatorImg"><br>Chef Ahmed</td>
                         <td>230</td>
                         <td>Iftar</td>
+                    </tr>
+                    <tr>
+                        <td><a href="" class="RecipeURL">Date Energy Balls</a></td>
+                        <td><img src="../images/Date-balls.jpg" alt="Recipe Photo" class="RecipeImg"></td>
+                        <td><img src="../images/ChefAhmed.jpg" alt="Creator Image" class="CreatorImg"><br>Chef Ahmed</td>
+                        <td>125</td>
+                        <td>Snacks</td>
                     </tr>
                 </table>
             </div>
@@ -110,11 +112,9 @@
         </main>
 
         <footer>
-        <footer>
-<div class="footer-content">
-    <p class="copy">© 2026 Our Name. All rights reserved.</p>
-       </div>     
-        </footer>
+            <div class="footer-content">
+                <p class="copy">© 2026 Ramadan's Table · All rights reserved <br> Contact: info@RamadanTable.sa | +966 50 000 0000 </p>
+            </div>
         </footer>
     </body>
 </html>
