--- a/HTML/home.html
+++ b/HTML/home.html
@@ -49,12 +49,10 @@
   </div>
 </main>
 
-<footer>
-<div class="footer-content">
-    <p class="copy">© 2026 Our Name. All rights reserved.</p>
-       </div>     
-      
-     
-        </footer>
+      <footer>
+        <div class="footer-content">
+            <p class="copy">© 2026 Ramadan's Table · All rights reserved <br> Contact: info@RamadanTable.sa | +966 50 000 0000 </p>
+          </div>
+      </footer>
 </body>
 </html>
