--- a/HTML/home.html
+++ b/HTML/home.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ramadan Recipes | Home</title>
+  <title>Ramadan's Table | Home</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 
 
   <style>
-    @import url("../CSS/Main.css");
-    @import url("../CSS/style.css");  
+    @import url("../CSS/style.css"); 
+     @import url("../CSS/Main.css");
   </style>
 </head>
 
@@ -34,16 +34,13 @@
   <div class="card">
     <h1>Welcome</h1>
     <p>Choose how you want to enter the system.</p>
-
-    <h2 style="margin-top:14px;">User</h2>
     <div class="btn-row">
-      <a class="btn btn-primary" href="login.html">User Sign-in</a>
-      <a class="btn btn-secondary" href="signup.html">User Sign-up</a>
+      <a class="btn btn-primary" href="login.html">Log-in</a>
+      <br>
+      <a class="btn btn-primary" href="signup.html">Sign-up</a>
     </div>
 
-    <h2 style="margin-top:18px;">Admin</h2>
     <div class="btn-row">
-      <a class="btn btn-primary" href="login.html">Admin Sign-in</a>
       <a class="btn btn-secondary" href="index.html">Back to About</a>
     </div>
   </div>
