--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,7 +10,7 @@
             @import url("../CSS/Main.css");
                 @import url("../CSS/style.css");
 </style>
-        <title>Home Page</title>
+        <title>Ramadan's Table</title>
 
 
     </head>
