--- a/HTML/MyRecipes.html
+++ b/HTML/MyRecipes.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Recipes</title>
+  <title>Ramadan's Table | My Recipes</title>
 
 
   <link rel="stylesheet" href="../CSS/Main.css">
