--- a/HTML/SignUp.html
+++ b/HTML/SignUp.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sign-up</title>
+  <title>Ramadan's Table | Sign-up</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 
@@ -52,6 +52,7 @@
 
       <label for="pw">Password</label>
       <input type="password" id="pw" name="password" required>
+      <br>
 
       <button class="btn btn-primary btn-block" type="submit">Create Account</button>
 
