--- a/HTML/MyRecipes.html
+++ b/HTML/MyRecipes.html
@@ -82,10 +82,10 @@
               </td>
               <td>
                 <a href="https://www.youtube.com/watch?v=8Qc0ja_I4c0" target="_blank" class="video-link" rel="noopener">
-                  🎥 Watch Video
+                  ▶ Watch Video
                 </a>
               </td>
-              <td class="likes-count">245 ❤️</td>
+              <td class="likes-count">245</td>
               <td>
                 <a href="EditRecipe.html" class="btn btn-edit">Edit</a>
               </td>
@@ -123,10 +123,10 @@
               </td>
               <td>
                 <a href="https://www.youtube.com/watch?v=8Nsq6tNFMJI" target="_blank" class="video-link" rel="noopener">
-                  🎥 Watch Video
+                  ▶ Watch Video
                 </a>
               </td>
-              <td class="likes-count">389 ❤️</td>
+              <td class="likes-count">389 </td>
               <td><a href="EditRecipe.html" class="btn btn-edit">Edit</a></td>
               <td><a href="#" class="btn btn-delete">Delete</a></td>
             </tr>
@@ -159,10 +159,10 @@
               </td>
               <td>
                 <a href="https://www.youtube.com/watch?v=0Y35SLLH9yU" target="_blank" class="video-link" rel="noopener">
-                  🎥 Watch Video
+                  ▶ Watch Video
                 </a>
               </td>
-              <td class="likes-count">156 ❤️</td>
+              <td class="likes-count">156</td>
               <td><a href="EditRecipe.html" class="btn btn-edit">Edit</a></td>
               <td><a href="#" class="btn btn-delete">Delete</a></td>
             </tr>
@@ -194,45 +194,10 @@
               </td>
               <td>
                 <a href="https://www.youtube.com/watch?v=8q-440wyM8U" target="_blank" class="video-link" rel="noopener">
-                  🎥 Watch Video
+                  ▶ Watch Video
                 </a>
               </td>
-              <td class="likes-count">421 ❤️</td>
-              <td><a href="EditRecipe.html" class="btn btn-edit">Edit</a></td>
-              <td><a href="#" class="btn btn-delete">Delete</a></td>
-            </tr>
-
-            <tr>
-              <td>
-                <div class="recipe-info">
-                  <img src="../images/5.jpg" alt="Dates" class="recipe-thumb" />
-                  <a href="#" class="recipe-name">Date Balls with Nuts</a>
-                </div>
-              </td>
-              <td>
-                <ul class="ingredients-list">
-                  <li>Pitted dates - 500g</li>
-                  <li>Ground almonds - 1 cup</li>
-                  <li>Coconut - 1/2 cup</li>
-                  <li>Butter - 2 tbsp</li>
-                  <li>Cinnamon - 1 tsp</li>
-                </ul>
-              </td>
-              <td>
-                <ol class="instructions-list">
-                  <li>Blend dates with butter</li>
-                  <li>Add almonds and cinnamon</li>
-                  <li>Shape mixture into balls</li>
-                  <li>Coat balls with coconut</li>
-                  <li>Refrigerate before serving</li>
-                </ol>
-              </td>
-              <td>
-                <a href="https://www.youtube.com/watch?v=Fn0fr5wDAXc" target="_blank" class="video-link" rel="noopener">
-                  🎥 Watch Video
-                </a>
-              </td>
-              <td class="likes-count">198 ❤️</td>
+              <td class="likes-count">421</td>
               <td><a href="EditRecipe.html" class="btn btn-edit">Edit</a></td>
               <td><a href="#" class="btn btn-delete">Delete</a></td>
             </tr>
