--- a/HTML/ViewRecipe.html
+++ b/HTML/ViewRecipe.html
@@ -32,20 +32,19 @@
 
   <main>
 
-    <!-- ✅ Part: 3 buttons on top (NOT functional in this phase) -->
+    <!-- buttons on top (NOT functional in this phase) -->
     <div class="TopButtons">
       <button type="button" class="TopBtn">★ Favourite</button>
       <button type="button" class="TopBtn">♥ Like</button>
       <button type="button" class="TopBtn">⚑ Report</button>
     </div>
 
-    <!-- ✅ Part: Recipe name and photo -->
     <div class="RecipeMain">
       <h1 class="RecipeName">Oat Soup</h1>
       <img src="../images/Oat-soup.jpg" alt="Oat Soup" class="RecipeBigImg">
     </div>
 
-    <!-- ✅ Part: Creator name and photo -->
+
     <div class="Card">
       <h2>Recipe Creator</h2>
       <div class="CreatorRow">
@@ -57,7 +56,7 @@
       </div>
     </div>
 
-    <!-- ✅ Part: Category and description -->
+
     <div class="Card">
       <h2>Category & Description</h2>
       <p><strong>Category:</strong> Iftar</p>
@@ -66,7 +65,7 @@
       </p>
     </div>
 
-    <!-- ✅ Part: Ingredients list (name + quantity) -->
+ 
     <div class="Card">
       <h2>Ingredients</h2>
       <ul class="IngredientList">
@@ -79,7 +78,7 @@
       </ul>
     </div>
 
-    <!-- ✅ Part: Instructions list -->
+
     <div class="Card">
       <h2>Instructions</h2>
       <ol class="StepsList">
@@ -98,7 +97,7 @@
     </div>
 
 
-    <!-- ✅ Part: Comments newest -> oldest + form -->
+
     <div class="Card">
       <div class="CommentsHeader">
         <h2>Comments</h2>
@@ -106,7 +105,7 @@
       </div>
 
       <div id="CommentsList">
-        <!-- Newest first -->
+
         <div class="CommentBox">
           <div class="CommentTop">
             <strong>Reem</strong>
@@ -125,12 +124,12 @@
       </div>
     </div>
 
-    <!-- Optional back link (not required but helpful) -->
+
     <a href="User.html" class="BackLink">← Back to User Page</a>
 
   </main>
 
-  <!-- ===== Small modal (tiny box with X) ===== -->
+
   <div id="CommentModal" class="Modal Hidden">
     <div class="ModalBox">
       <div class="ModalHead">
