--- a/HTML/EditRecipe.html
+++ b/HTML/EditRecipe.html
@@ -42,10 +42,10 @@
 
     <label for="Category">Category:</label><br>
     <select id="Category" name="Category" required>
-        <option value="" disabled selected hidden>Select a recipe</option>
+        <option value="" disabled selected hidden>Select a Category</option>
         <option value="Iftar">Iftar</option>
         <option value="Suhoor">Suhoor</option>
-        <option value="Snack">Snack</option>
+        <option value="Snack" selected>Snack</option>
     </select><br><br>
 
     <label for="Description">Description:</label><br>
